# SubSketch

./: README.md  pyproject.toml
notebooks/: BGC0001059_report_minimal.html  motif1136_report.html  motif1136_report_minimal.html  sc138.html
src/subsketch/: bgc.py  classes.py  config.py  html_helpers.py  io.py  loaders.py  molecule.py  motif.py
src/subsketch/data/: domain_colors.txt
