[build-system]
requires = ["setuptools >= 64"]
build-backend = "setuptools.build_meta"

[project]
name = "subsketch"
version = "0.1.0"
license = {text = "AGPL-3.0-or-later"}
description = "SubSketch: BGC subcluster visualizations"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Annette Lien", email = "a.lien@posteo.de"}
]
maintainers = [
    {name = "Annette Lien", email = "a.lien@posteo.de"}
]
keywords = [
    "bioinformatics",
    "genome-mining", 
    "biosynthetic-gene-clusters",
    "visualization",
    "clusterclue"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    ""rdkit-pypi>=2023.9",
    "biopython>=1.80",
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.urls]
Repository = "https://github.com/liannette/subsketch.git"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov"
]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"subsketch" = ["data/*"]